--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config/gradle/dependencies/versioning.gradle'
+apply from: 'config/gradle/dependencies/dependencies.gradle'
+apply from: 'config/gradle/keys/keys.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    def android_plugin = '3.1.4' // When updating, also sync that with the "config" versioning.gradle version.
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$android_plugin"
     }
 }
 
@@ -20,8 +19,4 @@ allprojects {
         google()
         jcenter()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
