--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,52 +1,46 @@
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath deps.plugin.kotlin
+    }
+}
+
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
+apply from: '../config/gradle/android/android.gradle'
+
 android {
-    compileSdkVersion 28
     defaultConfig {
         applicationId group
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode app.major * 10000 + app.minor * 1000 + app.patch * 100 + app.build
+        versionName "${app.major}.${app.minor}.${app.patch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            applicationIdSuffix ".$suffix.debug"
+            versionNameSuffix "-$suffix.debug"
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            java.srcDirs = [
-                    'src/main/kotlin',
-            ]
-        }
-        test {
-            java.srcDirs = [
-                    'src/test/kotlin',
-            ]
-            resources.srcDirs = [
-                    'src/test/resources',
-            ]
-        }
-        androidTest {
-            java.srcDirs = [
-                    'src/androidTest/kotlin',
-            ]
-        }
-    }
 }
 
 dependencies {
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation deps.kotlin.jre
+    implementation deps.support.appCompat
+    implementation deps.support.constraintLayout
+
+    testImplementation deps.test.junit
+
+    androidTestImplementation deps.supportTest.runner
+    androidTestImplementation deps.androidTest.espresso
 }
