[movies] init: Structure project in a basic clean-architecture-ready way
This change splits the project into 3 main modules:
1) The "domain" module, which will contain the inner layers, the
   "entities" or else business models and "use cases" or else
   interactors. Also, this module will contain the repository
   interfaces that through inversion of control and dependency
   injection will bind the "data" repository implementations on the
   "presentation" module.
2) The "data" module, which will contain the outer layer, the "web" or
   else network. Also, this module will contain the repository
   implementations (see description above).
3) The "presentation" module, which will contain the outer layers, the
   "ui" or else feature screens and "presenters" or else view models.
   This project will be using the MVVM pattern on that layer.

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -35,6 +35,9 @@ android {
 }
 
 dependencies {
+    implementation deps.module.domain
+    implementation deps.module.data
+
     implementation deps.kotlin.jre
     implementation deps.support.appCompat
     implementation deps.support.constraintLayout
