[movies] init: Add gradle version plugin
This plugin makes it easy for a project to manage and update its
dependencies. To run it issue the below gradle command:

dependencyUpdates -Drevision=release -DoutputFormatter=json,xml,txt

--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -3,6 +3,7 @@ ext.versions = [
         // Plugins
         android_plugin   : '3.1.4', // When updating, also sync that with top-level build.gradle version.
         kotlin_plugin    : '1.2.61',
+        versions_plugin  : '0.20.0',
 
         // IMPLEMENTATION // ************************************************************************************************
 
