--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -5,12 +5,15 @@ buildscript {
     }
     dependencies {
         classpath deps.plugin.kotlin
+        classpath deps.plugin.versions
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'com.github.ben-manes.versions'
 
 apply from: '../config/gradle/lang/kotlin.gradle'
+apply from: '../config/gradle/dependencies/dependency_updates.gradle'
 
 dependencies {
     implementation deps.kotlin.jre
