--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -4,6 +4,7 @@ ext.versions = [
         android_plugin   : '3.1.4', // When updating, also sync that with top-level build.gradle version.
         kotlin_plugin    : '1.2.61',
         versions_plugin  : '0.20.0',
+        dexcount_plugin  : '0.8.3',
 
         // IMPLEMENTATION // ************************************************************************************************
 
