--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config/gradle/dependencies/repositories.gradle'
 apply from: 'config/gradle/dependencies/versioning.gradle'
 apply from: 'config/gradle/dependencies/dependencies.gradle'
 apply from: 'config/gradle/keys/keys.gradle'
@@ -18,5 +19,6 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url reps.url.gradle }
     }
 }
