[movies] init: Add detekt plugin
Detekt is one of the two most famous static analysis tools for Kotlin.

Checkstyle, PMD and Findbugs, no longer work with Kotlin code and thus
the community have created new tools. Amongst those, Detekt and KTLint
are the best. This project will utilise Detekt.

--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -5,6 +5,7 @@ ext.versions = [
         kotlin_plugin    : '1.2.61',
         versions_plugin  : '0.20.0',
         dexcount_plugin  : '0.8.3',
+        detekt_plugin    : '1.0.0.RC8',
 
         // IMPLEMENTATION // ************************************************************************************************
 
