[movies] init: Add leak canary
Leak Canary is a memory leak detection library and its goal is to help
detekt memory leaks early and mainly for debug builds.

The current configuration disables leak canary for release builds.

--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -7,6 +7,9 @@ ext.versions = [
         dexcount_plugin  : '0.8.3',
         detekt_plugin    : '1.0.0.RC8',
 
+        // LeakCanary
+        'leakcanary'     : '1.6.1',
+
         // IMPLEMENTATION // ************************************************************************************************
 
         // Android
