[movies] init: Add base activity
This change moves the main activity to a feature package and makes usage
of the base activity so that it can utilise all that this base activity
provides (lifecycle logging, the contact, etc).

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".presentation.MainActivity">
+        <activity android:name=".presentation.feature.movies.MoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
