--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -22,6 +22,10 @@ ext.versions = [
         // Dependency Injection
         dagger           : "2.17",
 
+        // Rx
+        rxjava           : '2.2.2',
+        rxandroid        : '2.1.0',
+
         // Logging
         timber           : '4.7.1',
 
