[movies] init: Add web service
This is the TheMovieDB specific web service that is responsible to
query on demand for "movies".

NOTE: In order for the web service to work as expected a
"themoviedb_api.properties" file needs to be provided under the
"config/keys" path, with a valid "themoviedb_api_key" value within.

--- a/config/gradle/android/android.gradle
+++ b/config/gradle/android/android.gradle
@@ -38,6 +38,19 @@ android {
         sourceCompatibility java.version
         targetCompatibility java.version
     }
+    buildTypes {
+        def themoviedbApiPropertiesFile = file(keys.themoviedb_api_properties_file_path)
+        def themoviedbApiProperties = new Properties()
+        themoviedbApiProperties.load(new FileInputStream(themoviedbApiPropertiesFile))
+        def themoviedb_api_key = themoviedbApiProperties['themoviedb_api_key']
+
+        debug {
+            buildConfigField 'String', 'THEMOVIEDB_API_KEY', "\"${themoviedb_api_key}\""
+        }
+        release {
+            buildConfigField 'String', 'THEMOVIEDB_API_KEY', "\"${themoviedb_api_key}\""
+        }
+    }
     testOptions {
         unitTests {
             all {
