--- a/config/gradle/android/android.gradle
+++ b/config/gradle/android/android.gradle
@@ -53,6 +53,7 @@ android {
     }
     testOptions {
         unitTests {
+            includeAndroidResources = true // So that robolectric has access to resources.
             all {
                 testLogging { // Print test details in the terminal (or CI).
                     events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
@@ -70,6 +71,7 @@ android {
         test {
             java.srcDirs = [
                     'src/test/kotlin',
+                    'src/robolectricTest/kotlin',
             ]
             resources.srcDirs = [
                     'src/test/resources',
