[movies] feature: Prettify movie card display
This change adds the following:
1) A movie backdrop image to the movie item. The Glide library
   is used to draw the image from the image url.
2) Overlay the movie title on top of the movie backdrop image with a
   grey gradient background so that the title is not lost when white
   backdrop images are loaded.
3) A movie details row, which displays the movie's release date year
   (along with its month) on the left side, and movie's vote average
   (along with its count) on the right side.

--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -33,6 +33,9 @@ ext.versions = [
         // Rest
         retrofit         : "2.4.0",
 
+        // Image
+        glide            : '4.8.0',
+
         // Logging
         timber           : '4.7.1',
 
