[movies] feature: Add movie details activity
This commit also add the responsible classes that help with navigating
to the movie details activity.

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
 
         <activity android:name=".presentation.feature.movies.MoviesActivity"/>
 
+        <activity
+            android:name=".presentation.feature.movie.MovieDetailsActivity"
+            android:label="@string/activity_movie_details_name"/>
+
     </application>
 
 </manifest>
