[movies] feature: Add dart library for activity extra injection
This is mainly used to pass the clicked movie object from the movies
activity to the movie details activity.

--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -36,6 +36,9 @@ ext.versions = [
         // Image
         glide            : '4.8.0',
 
+        // Dart
+        'dart'           : '2.0.3',
+
         // Logging
         timber           : '4.7.1',
 
