--- a/config/gradle/dependencies/dependencies.gradle
+++ b/config/gradle/dependencies/dependencies.gradle
@@ -31,6 +31,7 @@ ext.deps = [
                 'appCompat'       : "com.android.support:appcompat-v7:$versions.support_library",
                 'recyclerView'    : "com.android.support:recyclerview-v7:$versions.support_library",
                 'cardView'        : "com.android.support:cardview-v7:$versions.support_library",
+                'design'          : "com.android.support:design:$versions.support_library",
                 'constraintLayout': "com.android.support.constraint:constraint-layout:$versions.constraint_layout",
         ],
 
