--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation deps.support.appCompat
     implementation deps.support.recyclerView
     implementation deps.support.cardView
+    implementation deps.support.design
     implementation deps.support.constraintLayout
     implementation deps.arch.lifecycleExtensions
     implementation deps.di.dagger
