--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -1,65 +1,68 @@
 ext.versions = [
 
         // Plugins
-        android_plugin   : '3.1.4', // When updating, also sync that with top-level build.gradle version.
-        kotlin_plugin    : '1.2.61',
-        versions_plugin  : '0.20.0',
-        dexcount_plugin  : '0.8.3',
-        detekt_plugin    : '1.0.0.RC8',
+        android_plugin       : '3.1.4', // When updating, also sync that with top-level build.gradle version.
+        kotlin_plugin        : '1.2.61',
+        versions_plugin      : '0.20.0',
+        dexcount_plugin      : '0.8.3',
+        detekt_plugin        : '1.0.0.RC8',
 
         // LeakCanary
-        'leakcanary'     : '1.6.1',
+        'leakcanary'         : '1.6.1',
 
         // IMPLEMENTATION // ************************************************************************************************
 
         // Android
-        support_library  : '28.0.0-rc02',
-        constraint_layout: '1.1.3',
+        support_library      : '28.0.0-rc02',
+        constraint_layout    : '1.1.3',
 
         // Architecture Components
-        arch             : '1.1.1',
+        arch                 : '1.1.1',
 
         // Dependency Injection
-        dagger           : "2.17",
+        dagger               : "2.17",
 
         // Rx
-        rxjava           : '2.2.2',
-        rxandroid        : '2.1.0',
+        rxjava               : '2.2.2',
+        rxandroid            : '2.1.0',
 
         // Network
-        gson             : "2.8.5",
-        okhttp           : "3.11.0",
+        gson                 : "2.8.5",
+        okhttp               : "3.11.0",
 
         // Rest
-        retrofit         : "2.4.0",
+        retrofit             : "2.4.0",
 
         // Image
-        glide            : '4.8.0',
+        glide                : '4.8.0',
 
         // Dart
-        'dart'           : '2.0.3',
+        'dart'               : '2.0.3',
 
         // Logging
-        timber           : '4.7.1',
+        month_and_year_picker: '1.3.0',
+
+        // Logging
+        timber               : '4.7.1',
 
         // TEST IMPLEMENTATION // *******************************************************************************************
 
         // Test
-        junit            : '4.12',
-        assertj          : '3.11.1',
+        junit                : '4.12',
+        assertj              : '3.11.1',
 
         // Mock
-        mockito_kotlin   : '1.6.0',
+        mockito_kotlin       : '1.6.0',
 
         // Robolectric
-        robolectric      : '3.8',
+        robolectric          : '3.8',
 
         // ANDROID TEST IMPLEMENTATION // ***********************************************************************************
 
         // Support Test
-        support_test     : '1.0.2',
+        support_test         : '1.0.2',
 
         // Android Test
-        espresso         : '3.0.2',
+        espresso             : '3.0.2',
 
 ]
