[movies] update: Update detekt plugin to latest 1.0.0-RC11 version
Also, as part of this update, a new autogenerated config file was
created that replaced the current detekt.yml file. This new config file
added new rules, removed old unsupported rules and in general updated
Detekt to its next level.

--- a/config/gradle/quality/detekt.gradle
+++ b/config/gradle/quality/detekt.gradle
@@ -1,18 +1,14 @@
+def comma = ","
+
 detekt {
 
-    version = versions.detekt_plugin
-
-    def comma = ","
-    profile("main") {
-        input = "$projectDir"
-        config = "$project.rootDir/config/quality/detekt.yml"
-        filters = ".*/test/.*" + comma +
-                ".*/robolectricTest/.*" + comma +
-                ".*/androidTest/.*" + comma +
-                ".*/resources/.*"
-        disableDefaultRuleSets = false
-        output = "$project.buildDir/reports/detekt"
-        parallel = true
-    }
+    toolVersion = versions.detekt_plugin
+    config = files("${project.rootDir}/config/quality/detekt.yml")
+    filters = ".*/test/.*" + comma +
+            ".*/robolectricTest/.*" + comma +
+            ".*/androidTest/.*" + comma +
+            ".*/resources/.*"
+    disableDefaultRuleSets = false
+    parallel = true
 
 }
