--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -5,7 +5,7 @@ ext.versions = [
         kotlin_plugin        : '1.3.10',
         versions_plugin      : '0.20.0',
         dexcount_plugin      : '0.8.4',
-        detekt_plugin        : '1.0.0.RC8',
+        detekt_plugin        : '1.0.0-RC11',
 
         // LeakCanary
         'leakcanary'         : '1.6.1',
