--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,4 +38,6 @@ dependencies {
         exclude group: excludedDeps.group.jetbrainsKotlin,
                 module: excludedDeps.module.kotlinReflect
     })
+
+    detektPlugins deps.plugin.detektFormatting
 }
