--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -21,4 +21,6 @@ dependencies {
         exclude group: excludedDeps.group.jetbrainsKotlin,
                 module: excludedDeps.module.kotlinReflect
     })
+
+    detektPlugins deps.plugin.detektFormatting
 }
