--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,19 +1,9 @@
-buildscript {
-    repositories {
-        google()
-        jcenter()
-        maven { url reps.url.gradle }
-    }
-    dependencies {
-        classpath deps.plugin.kotlin
-        classpath deps.plugin.versions
-    }
-}
-
 apply plugin: 'kotlin'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'io.gitlab.arturbosch.detekt'
 
 apply from: '../config/gradle/lang/kotlin.gradle'
+apply from: '../config/gradle/quality/detekt.gradle'
 apply from: '../config/gradle/dependencies/dependency_updates.gradle'
 
 dependencies {
@@ -21,4 +11,6 @@ dependencies {
 
     implementation deps.kotlin.jre
     implementation deps.rx.rxjava
+
+    detektPlugins deps.plugin.detektFormatting
 }
