[movies] build: Update detekt comments section rules

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -51,11 +51,11 @@ console-reports:
 comments:
   active: true
   CommentOverPrivateFunction:
-    active: false
+    active: true
   CommentOverPrivateProperty:
-    active: false
+    active: true
   EndOfSentenceFormat:
-    active: false
+    active: true
     endOfSentenceFormat: ([.?!][ \t\n\r\f<])|([.?!]$)
   UndocumentedPublicClass:
     active: false
