[movies] build: Update detekt performance section rules

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -355,7 +355,7 @@ naming:
 performance:
   active: true
   ArrayPrimitive:
-    active: false
+    active: true
   ForEachOnRange:
     active: true
   SpreadOperator:
