--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -13,7 +13,7 @@ ext.versions = [
         // IMPLEMENTATION // ************************************************************************************************
 
         // Android
-        support_library      : '28.0.0-rc02',
+        support_library      : '28.0.0',
         constraint_layout    : '1.1.3',
 
         // Architecture Components
