--- a/config/gradle/dependencies/dependencies.gradle
+++ b/config/gradle/dependencies/dependencies.gradle
@@ -106,8 +106,9 @@ ext.deps = [
 
         'androidTest': [
                 'config'  : "androidx.test.runner.AndroidJUnitRunner",
-                'runner'  : "androidx.test:runner:$versions.test_runner",
-                'espresso': "androidx.test.espresso:espresso-core:$versions.espresso",
+                'core'    : "androidx.test:core:$versions.test_core",
+                'runner'  : "androidx.test.ext:junit:$versions.test_junit",
+                'espresso': "androidx.test.espresso:espresso-core:$versions.test_espresso",
         ],
 
 ]
