--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -66,7 +66,8 @@ ext.versions = [
         // ANDROID TEST IMPLEMENTATION // ***********************************************************************************
 
         // Android Test
-        test_runner          : '1.1.0',
-        espresso             : '3.1.0',
+        test_core            : '1.0.0',
+        test_junit           : '1.0.0',
+        test_espresso        : '3.1.0',
 
 ]
