[movies] test: Replace deprecated imports for the robolectric provider

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ group=io.petros.movies
 # AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
+# Robolectric
+android.enableUnitTestBinaryResources=true
