[movies] lib: Add android ktx
As part of this commit all custom extensions where also re-structured.

--- a/config/gradle/dependencies/dependencies.gradle
+++ b/config/gradle/dependencies/dependencies.gradle
@@ -36,6 +36,10 @@ ext.deps = [
                 'constraintLayout': "androidx.constraintlayout:constraintlayout:$versions.constraint_layout",
         ],
 
+        'androidKtx' : [
+                'core': "androidx.core:core-ktx:$versions.ktx_core",
+        ],
+
         'arch'       : [
                 'lifecycleExtensions': "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle_extensions",
         ],
