--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -19,6 +19,9 @@ ext.versions = [
         material             : '1.0.0',
         constraint_layout    : '1.1.3',
 
+        // Android KTX
+        ktx_core             : '1.0.1',
+
         // Architecture Components
         lifecycle_extensions : '2.0.0',
 
