[movies] build: Add build caching capabilities

--- a/config/gradle/lang/kotlin.gradle
+++ b/config/gradle/lang/kotlin.gradle
@@ -1,3 +1,4 @@
+apply from: '../config/gradle/lang/kapt.gradle'
 apply from: '../config/gradle/lang/java.gradle'
 
 sourceCompatibility = java.version
