--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'io.gitlab.arturbosch.detekt'
 
