[movies] build: Tune gradle jvm args
Also restructure the comments for the gradle.properties file.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,27 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+# JVM arguments
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx8g -Xms2g
+# Parallel Builds
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 # Caching
+# For more details on how to configure caching visit
+# https://blog.jetbrains.com/kotlin/2018/02/using-gradle-build-cache-with-kotlin
 org.gradle.caching=true
 android.enableBuildCache=true
-# App.
+# App
+# For more details about how to configure the app visit
+# https://github.com/ParaskP7/sample-code-movies
 group=io.petros.movies
 # AndroidX
+# For more details about how to configure AndroidX visit
+# https://developer.android.com/jetpack/androidx
 android.useAndroidX=true
 android.enableJetifier=true
 # Robolectric
+# For more deatila about how to configure Robolectric visit
+# http://robolectric.org
 android.enableUnitTestBinaryResources=true
